--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   },false);
   document.querySelector('#it3').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="MAP/map_ex.html"></iframe>';
+    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="Map/Map_ex.html"></iframe>';
     //includeHTML();
   },false);
   document.querySelector('.ict-clock').addEventListener("click", function(){
