--- a/Map/Map_ex.html
+++ b/Map/Map_ex.html
@@ -5,8 +5,8 @@
 	<title>Kakao 지도 연습</title>
   <style>
     .map{
-      width: 100vw;
-			height: 100vh;
+	    width: 500px;
+	    height: 400px;
     }
 
   </style>
