--- a/Map/Map_ex.html
+++ b/Map/Map_ex.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="map"></div>
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6f9730bc4b42c681cfc94678d83d0eab."></script>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6f9730bc4b42c681cfc94678d83d0eab"></script>
 	<script>
 		var container = document.querySelector('.map');
 		var options = {
